# ib_helper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
src/: AccountManager.cpp  AccountManager.hpp  CMakeLists.txt  TickLogger.cpp  ib_ts.cpp  scalpit.cpp
src/ib_helper/: .IBConnector.cpp.swp  AccountHandler.h  AccountHandler.hpp  AccountValue.h  AccountValue.hpp  Action.cpp  Action.h  Action.hpp  BarSize.cpp  BarSize.hpp  Book.cpp  Book.hpp  ContractBuilder.cpp  ContractBuilder.hpp  ContractRolloverCalendar.cpp  ContractRolloverCalendar.hpp  DecimalHelper.hpp  DisplayGroupHandler.hpp  Exchange.cpp  Exchange.hpp  ExecutionHandler.hpp  HistoricalDataHandler.hpp  IBConnectionMonitor.hpp  IBConnector.cpp  IBConnector.hpp  IBManagedConnector.cpp  IBManagedConnector.hpp  MarketDepthHandler.h  MarketDepthHandler.hpp  Order.hpp  OrderHandler.h  OrderHandler.hpp  OrderStatus.cpp  OrderStatus.hpp  Position.h  Position.hpp  ScannerHandler.hpp  SecurityType.hpp  TickHandler.h  TickHandler.hpp
src/tick/: CMakeLists.txt  TickCapture.cpp  TickCapture.h
src/util/: CSVParser.h  DateUtil.cpp  DateUtil.hpp  DecimalHelper.cpp  DecimalHelper.hpp  Logger.cpp  Logger.h  OptionSymbolParser.h  StringHelper.hpp  SysLogger.cpp  SysLogger.h
test/: BookTest.cpp  CMakeLists.txt  ContractBuilderTest.cpp  ContractRolloverTests.cpp  DateTest.cpp  ExchangeTest.cpp  HistoricalBarFeeder.cpp  HistoricalBarFeeder.h  HistoricalBarFeederTest.cpp  HistoricalTest.cpp  IBConnectorTest.cpp  MockIBConnector.cpp  MockIBConnector.h  MockIBConnectorTest.cpp  MockOrder.h  OrderTest.cpp  ReconnectTest.cpp  SecurityTypeTest.cpp  TickCaptureTest.cpp  ta_test.cpp  test_helpers.cpp  test_helpers.h
